[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
    "protobuf>=6.0.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
    "tronpy>=0.6.2",
]

[project.scripts]
keystore = "keystore_cli:main"

[tool.setuptools.packages.find]
include = ["wallet", "keystore","common"]
